# system_reability_gui

./: README.md
src/: pyproject.toml
src/lib/app/: __init__.py  app.py  settings.py
src/lib/app/split_settings/: __init__.py  logger.py  ui.py
src/lib/methods/: config.py
src/lib/methods/first_lab/: __init__.py  method.py  models.py
src/lib/methods/second_lab/: __init__.py  method.py  models.py
src/lib/methods/third_lab/: __init__.py  models.py  permanent_reserve.py  replacement_reserve.py  rolling_reserve.py  schemas.py
src/lib/ui/: services.py
src/lib/ui/design/: design.ui
src/lib/ui/repositories/: __init__.py  main_window.py  widgets.py
